implemented updateBookusecase, createRatingusecase, loadAllRatingsusecase, updateRatingusecase, code with me with @DavKna